test_regress/t/t_clocking_unsup1.out
%Error-UNSUPPORTED: t/t_clocking_unsup1.v:14:15: Unsupported: clocking event edge override
   14 |        output posedge #1 a;
      |               ^~~~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_clocking_unsup1.v:15:15: Unsupported: clocking event edge override
   15 |        output negedge #1 b;
      |               ^~~~~~~
%Error-UNSUPPORTED: t/t_clocking_unsup1.v:16:15: Unsupported: clocking event edge override
   16 |        output edge #1 b;
      |               ^~~~
%Error: Exiting due to
